<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8ECDFF"
    tools:context=".AdicionarFragment">

    <EditText
        android:id="@+id/edit_nome_produto"
        android:layout_width="350dp"
        android:layout_height="49dp"

        android:layout_marginTop="44dp"
        android:background="@drawable/bg_edittext_redondo"
        android:ems="10"
        android:hint="@string/adicionar_nome"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#9C9C9C"
        app:layout_constraintEnd_toEndOf="@+id/edit_preco_produto"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edit_preco_produto"
        app:layout_constraintTop_toBottomOf="@+id/btnFoto"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <TextView
        android:id="@+id/superiorFoto"
        android:layout_width="262dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:text="@string/mensagem_foto_produto"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_preco_produto"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/bg_edittext_redondo"
        android:ems="10"
        android:hint="@string/adicionar_preco"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#9C9C9C"
        app:layout_constraintEnd_toEndOf="@+id/edit_quantidade_produto"
        app:layout_constraintStart_toStartOf="@+id/edit_quantidade_produto"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome_produto"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/edit_descricao_produto"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/bg_edittext_redondo"
        android:ems="10"
        android:hint="@string/adicionar_descricao"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#9C9C9C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_quantidade_produto" />

    <EditText
        android:id="@+id/edit_quantidade_produto"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edittext_redondo"
        android:ems="10"
        android:hint="@string/adicionar_quantidade"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#9C9C9C"
        app:layout_constraintEnd_toEndOf="@+id/edit_descricao_produto"
        app:layout_constraintStart_toStartOf="@+id/edit_descricao_produto"
        app:layout_constraintTop_toBottomOf="@+id/edit_preco_produto" />

    <Button
        android:id="@+id/btnCadastrarProduto"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:background="@drawable/bg_button_redondo"
        android:text="@string/buttonCadastrar"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_descricao_produto"
        app:layout_constraintStart_toStartOf="@+id/edit_descricao_produto"
        app:layout_constraintTop_toBottomOf="@+id/edit_descricao_produto"
        app:layout_constraintVertical_bias="0.214" />

    <Button
        android:id="@+id/btnFoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_img"
        android:text="Foto"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/superiorFoto" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgFoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnFoto"
        app:layout_constraintEnd_toEndOf="@+id/btnFoto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnFoto"
        app:layout_constraintTop_toTopOf="@+id/btnFoto"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>
