<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8ECDFF"
    tools:context=".CadastrarUsuario">

    <TextView
        android:id="@+id/textViewNovoContato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="Novo Usuário"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNomeCadastro"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="87dp"
        android:ems="10"
        android:hint="@string/clienteNome"
        android:textColorHint="#9C9C9C"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:background="@drawable/bg_edittext_redondo"
        app:layout_constraintEnd_toEndOf="@+id/textViewNovoContato"
        app:layout_constraintStart_toStartOf="@+id/textViewNovoContato"
        app:layout_constraintTop_toBottomOf="@+id/textViewNovoContato" />

    <EditText
        android:id="@+id/editEmailCadastro"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/clienteEmail"
        android:textColorHint="#9C9C9C"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:background="@drawable/bg_edittext_redondo"
        app:layout_constraintEnd_toEndOf="@+id/editNomeCadastro"
        app:layout_constraintStart_toStartOf="@+id/editNomeCadastro"
        app:layout_constraintTop_toBottomOf="@+id/editNomeCadastro" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="122dp"
        android:layout_marginBottom="192dp"
        android:background="@drawable/bg_button_redondo"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editSenhaCadastro"
        app:layout_constraintStart_toStartOf="@+id/editSenhaCadastro"
        app:layout_constraintTop_toBottomOf="@+id/editSenhaCadastro" />

    <EditText
        android:id="@+id/editSenhaCadastro"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/clienteSenha"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:background="@drawable/bg_edittext_redondo"
        android:textColorHint="#9C9C9C"
        app:layout_constraintEnd_toEndOf="@+id/editEmailCadastro"
        app:layout_constraintStart_toStartOf="@+id/editEmailCadastro"
        app:layout_constraintTop_toBottomOf="@+id/editEmailCadastro" />

</androidx.constraintlayout.widget.ConstraintLayout>